[1.8.12]: Feat - 优化流动性挖矿页面和钱包入口
- 流动性挖矿页面添加后退按钮，点击返回钱包页面
- 钱包里的流动性挖矿改为显示质押金额和待领取收益
- 添加箭头按钮点击跳转到流动性挖矿二级页面
- 锁定资产框已添加 withdraw 按钮，一键归集 Agents 余额
- 更新版本号至 1.8.12

--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -311,8 +311,8 @@
     "agents": "Agents",
     "totalValue": "总估值",
     "liquidityMining": "流动性挖矿",
-    "clickToEnter": "点击进入",
-    "highYield": "高收益挖矿",
+    "stakedLiquidity": "质押流动性",
+    "pendingRewards": "待领取收益",
     "withdrawAllSuccess": "已成功归集所有 Agents 余额",
     "depositDesc": "从外部钱包转入",
     "swapDesc": "代币兑换",
