feat: 重构我的小队页面为列表视图，添加余额/盈亏/场次/胜率展示和操作按钮
- AgentCard 组件新增 viewMode 属性支持列表视图
- Squad 页面改为列表布局，添加表头
- 每行显示 Agent 头像、名称、状态、余额、盈亏、场次、胜率
- 支持快速加入/退出竞技场操作
- 消息通知使用更小字体和系统默认字体

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -101,6 +101,9 @@
     "quickMint": "Quick Mint",
     "mintCost": "Mint Cost",
     "minting": "Minting",
+    "summoningAgents": "Summoning Agents from the Void...",
+    "mintSuccess": "Mint Successful!",
+    "newAgentsJoined": "New Agents have joined your squad",
     "count": "",
     "noFilteredAgents": "No matching Agents",
     "tryOtherFilter": "Try other filters",
