--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -101,6 +101,9 @@
     "quickMint": "快速铸造",
     "mintCost": "铸造费用",
     "minting": "铸造中",
+    "summoningAgents": "正在从虚空中召唤特工...",
+    "mintSuccess": "铸造成功！",
+    "newAgentsJoined": "新特工已加入你的小队",
     "count": "个",
     "noFilteredAgents": "没有符合条件的 Agent",
     "tryOtherFilter": "尝试其他筛选条件",
