fix: Add i18n translations for withdrawAll button and improve data rehydration

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -326,7 +326,9 @@
     "scanQR": "Scan QR code to deposit",
     "notice": "Note",
     "minDeposit": "Min deposit",
-    "friendDeposit": "Deposit"
+    "friendDeposit": "Deposit",
+    "withdrawAll": "Withdraw",
+    "withdrawAllSuccess": "Successfully collected all Agents balance"
   },
   "liquidity": {
     "title": "Liquidity Mining",
